Decide to format the site a lot more

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <meta charset="utf-8">
 <html lang="en">
     <head>
-        <title>HTML Test Page</title>
+        <title>Welcome To Johnny Adam's Website</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9">
     </head>
     <body>
         <header>
@@ -18,107 +19,41 @@
                 <a href="#" id="others">Contact</a>
             </nav>
         </header>
-        <section id="p">
+
+        <section id="view">
+            <article>
+                <img src="images/Ravine.jpg" alt="A ravine">
+                <p>
+                    <strong>Oct. 3, 2019</strong> <br>
+                    A pic of a ravine taken while 
+                    crossing a bridge.
+                </p>
+            </article>
+            <article>
+                <img src="images/Shine.jpg" alt="A sun shining over a cliff">
+                <p>
+                    <strong>May 25, 2020</strong><br>
+                    A pic of a cliffside, where the 
+                    sun shines above the waters.
+                </p>
+            </article>
+        </section>
+
+        <section id="intro">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Donec sodales hendrerit velit, a gravida lectus tincidunt 
-                eget. Vivamus quis interdum quam. Integer ultricies mollis
-                magna, non rhoncus lectus congue ut. Proin at fermentum 
-                tellus. Orci varius natoque penatibus et magnis dis parturient 
-                montes, nascetur ridiculus mus. Integer sagittis, diam quis 
-                venenatis aliquam, nulla sapien cursus felis, vitae consectetur 
-                neque sapien a nisi. Nulla facilisis venenatis enim et imperdiet. 
-                Phasellus interdum, orci et viverra porta, lorem enim aliquam 
-                eros, vitae suscipit mi purus sed sapien. Nam aliquam, tellus 
-                quis iaculis mattis, est velit eleifend libero, iaculis tincidunt 
-                nisi elit nec lectus. Sed sed ultrices augue. Curabitur sem 
-                sapien, sagittis ut pulvinar vel, lacinia in erat. Sed augue 
-                elit, pulvinar vel facilisis eu, semper feugiat dolor. Praesent 
-                id lectus ornare magna molestie sollicitudin.
-                <br>
-                Proin ipsum elit, consequat vitae nulla sit amet, tristique 
-                molestie diam. Ut tempor odio sit amet nunc pulvinar, nec 
-                mattis enim molestie. In ut tristique quam. Cras eleifend 
-                lorem eleifend enim gravida, sed interdum elit varius. In 
-                sed magna mauris. Class aptent taciti sociosqu ad litora 
-                torquent per conubia nostra, per inceptos himenaeos. Ut 
-                eleifend varius purus, at convallis mi scelerisque vitae. 
-                Donec ullamcorper elit at nisl varius scelerisque. Nam dui 
-                quam, malesuada eu vehicula ut, eleifend eu lectus. Lorem 
-                ipsum dolor sit amet, consectetur adipiscing elit. Duis 
-                tincidunt ultricies semper. Nunc vel diam tincidunt, blandit
-                 metus et, suscipit nisi. Aenean tempor sapien vitae mi elementum
-                 , id euismod ante semper. Donec viverra rhoncus nisi, at condimentum 
-                 felis vulputate eu. Proin vitae dui ac odio volutpat ornare.
-                <br>
-                Aenean non ante tempor, rutrum felis eu, interdum enim. Fusce 
-                vitae tortor vel velit placerat molestie. Aliquam ultricies, 
-                urna ut varius imperdiet, neque arcu feugiat lorem, a malesuada 
-                risus risus ut dolor. Curabitur dui tellus, egestas sed consectetur 
-                vel, lobortis eu arcu. Fusce sed dui nisi. Praesent molestie 
-                vulputate mauris, vel pretium mi. Nunc dignissim velit scelerisque, 
-                scelerisque sem ac, dictum purus. Curabitur sagittis ipsum lorem, ut 
-                malesuada magna congue vitae. Morbi vulputate lacinia velit sit amet 
-                blandit. Maecenas sed tincidunt libero. Integer eget porttitor metus. 
-                Morbi scelerisque consectetur consequat. Praesent tempor, metus id 
-                eleifend aliquet, dolor lectus malesuada massa, quis luctus dolor nibh
-                nec neque. In semper a ipsum sed ultricies. Vivamus in nisi risus.
+                Hello. My name is <em>Jonnathan Adams</em>,
+                but can call me "Johnny Adams". <br>
+                I am a photographer and designer. I base my 
+                designs off the many photos I have taken, but 
+                this website more focused on the photography 
+                half of my career.
             </p>
         </section>
 
-        <section class="gallery">
-            <div id="img">
-                <img src="https://dummyimage.com/200x150/000000/f018f0.jpg" alt="Dummy Image 1">
-                <p>
-                    Description 1
-                </p>
-            </div>
-            <div id="img">
-                <img src="https://dummyimage.com/200x150/000000/ffffff.jpg" alt="Dummy Image 2">
-                <p>
-                    Desciption 2
-                </p>
-            </div>
-            <div id="img">
-                <img src="https://dummyimage.com/200x150/000000/f0da18.jpg" alt="Dummy Image 3">
-                <p>
-                    Description 3
-                </p>
-            </div>
-            <div id="img">
-                <img src="https://dummyimage.com/200x150/000000/e8e0a5.jpg" alt="Dummy Image 4">
-                <p>
-                    Desciption 4
-                </p>
-            </div>
-            <div id="img">
-                <img src="https://dummyimage.com/200x150/000000/59ff00.jpg" alt="Dummy Image 5">
-                <p>
-                    Description 5
-                </p>
-            </div>
-            <div id="img">
-                <img src="https://dummyimage.com/200x150/000000/b1de99.jpg" alt="Dummy Image 6">
-                <p>
-                    Desciption 6
-                </p>
-            </div>
-            <div id="img">
-                <img src="https://dummyimage.com/200x150/000000/00f2ff.jpg" alt="Dummy Image 7">
-                <p>
-                    Desciption 7
-                </p>
-            </div>
-            <div id="img">
-                <img src="https://dummyimage.com/200x150/000000/ed9797.jpg" alt="Dummy Image 8">
-                <p>
-                    Desciption 8
-                </p>
-            </div>
-        </section>
-
         <footer>
-            <h4>&copy; L.O.L.</h4>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                <h4>&copy; L.O.L. Productions</h4>
+            </a>
         </footer>
     </body>
 </html>
