changed up styling in the homepage a bit

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html lang="en">
     <head>
-        <title>Welcome To Johnny Adam's Website</title>
+        <title>The Adams Experience</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9">
@@ -10,7 +10,7 @@
     <body>
         <header>
             <a href="index.html" id="logo">
-                <img src="https://dummyimage.com/200x100/aca2e8/09090a.jpg&text=Logo" alt="Dummy Logo Icon">
+                <img src="images/SiteLogo.png" alt="Site Logo">
             </a>
             <nav>
                 <a href="#" id="others">About</a>
@@ -42,11 +42,21 @@
         <section id="intro">
             <p>
                 Hello. My name is <em>Jonnathan Adams</em>,
-                but can call me "Johnny Adams". <br>
+                but you can call me "Johnny Adams".
+            </p>
+            <p>
                 I am a photographer and designer. I base my 
                 designs off the many photos I have taken, but 
                 this website more focused on the photography 
-                half of my career.
+                half of my career. For those who seek some 
+                beautiful photos, you've come to the right 
+                place. Here is where you can find out who am 
+                I and the types of photography I've taken 
+                across the many years. 
+            </p>
+            <p>
+                Thank you for coming to my site. Heopfully 
+                you have a lot of fun 
             </p>
         </section>
 
