Added more content to the pages

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 <img src="images/SiteLogo.png" alt="Site Logo">
             </a>
             <nav>
-                <a href="#" id="others">About</a>
-                <a href="#" id="others">Works</a>
+                <a href="About/about.html" id="others">About</a>
+                <a href="Works/works.html" id="others">Works</a>
                 <a href="#" id="others">Interests</a>
                 <a href="#" id="others">Contact</a>
             </nav>
@@ -55,8 +55,8 @@
                 across the many years. 
             </p>
             <p>
-                Thank you for coming to my site. Heopfully 
-                you have a lot of fun 
+                Thank you for coming to my site. Hopefully 
+                you have a lot of fun exploring my site!!!
             </p>
         </section>
 
