--- a/Works/works.html
+++ b/Works/works.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
     <head>
-        <title>The Adam's Experience: About Page</title>
+        <title>The Adam's Experience: Works Page</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9">
