Added even more content

--- a/Works/works.html
+++ b/Works/works.html
@@ -20,12 +20,257 @@
             </nav>
         </header>
 
+        <section id="entrance">
+            <h2>
+                Here is where you can see the many photos I've 
+                taken throughout the years in photography. <br>
+                If you wanted to view the images in their full 
+                glory, aka. full resolution, you can click on 
+                the image and it takes you to a page of the image.
+            </h2>
+        </section>
+
         <section id="imgs">
             <article>
-                <img src="../images/Canyon.jpg" alt="A photo from the Grand Canyon">
+                <a href="../images/Mountain .jpg">
+                    <img src="../images/MountainLo.jpg" alt="Mountains By the Roadside">
+                </a>
+                <h3>july 23, 2017</h3>
+                <p>
+                    was parked to a large space on the side 
+                    of the road and saw this view. decided 
+                    to take this picture as it looks 
+                    breath-taking.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Light.jpg">
+                    <img src="../images/LightLo.jpg" alt="Sun Shining Past Clouds">
+                </a>
+                <h3>july 23, 2017</h3>
+                <p>
+                    this photo is where i saw the sun shine 
+                    past the clouds. i saw this scene and i 
+                    knew i needed to take this photo. to see 
+                    this view of the light shining down feels 
+                    angelic and beautiful.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Canyon.jpg">
+                    <img src="../images/CanyonLo.jpg" alt="A photo from the large Canyon">
+                </a>
                 <h3>July 26, 2017</h3>
                 <p>
-                    A photo of the Grand Canyon
+                    A photo of the large Canyon, where I 
+                    was by the railing, taking a photo of 
+                    the beautiful sight of this landmark 
+                    in Arizona.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Rushmore.jpg">
+                    <img src="../images/RushmoreLo.jpg" alt="Photo Of Mount Rushmore">
+                </a>
+                <h3>july 26, 2017</h3>
+                <p>
+                    after visiting the canyon, we found out 
+                    that the grand canyon was nearby and 
+                    decided have a tour over there. I later 
+                    took a pic of this in memory of this 
+                    event.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Hills.jpg">
+                    <img src="../images/HillsLo.jpg" alt="A photo of some hills by some road railing">
+                </a>
+                <h3>july 28, 2017</h3>
+                <p>
+                    while on the road, i've taken this photo 
+                    as i thought the hills on the distance, 
+                    with the cloudy skies, does set a cold,
+                    yet soothing tone to it.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Waterfall.jpg">
+                    <img src="../images/WaterfallLo.jpg" alt="A photo of watercfalls">
+                </a>
+                <h3>July 30, 2017</h3>
+                <p>
+                    while visiting a small attraction spot in 
+                    california, i saw this view of the waterfalls 
+                    there and decided to take this photo
+                </p>
+            </article>
+            <article>
+                <a href="../images/WaterfallPano.jpg">
+                    <img src="../images/WaterfallPanoLo.jpg" alt="A more in-depth pano pic of the waterfalls">
+                </a>
+                <h3>july 30, 2017</h3>
+                <p>
+                    this is a more in-depth photo of the waterfall 
+                    photo in the previous post. This pano pic shows 
+                    more aspects of the place, like a rainbow, or the 
+                    details in the rocks and river.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Eclipse.jpg">
+                    <img src="../images/EclipseLo.jpg" alt="2017 Solar Eclipse">
+                </a>
+                <h3>august 21, 2017</h3>
+                <p>
+                    remember in 2017, there was a 
+                    once-in-a-lifetime event, where there 
+                    was a solar eclipse?<br> 
+                    this is a photo i take back then (when 
+                    i was teen) where i took this photo, using 
+                    the "eclipse googles" given to me by my 
+                    teacher. 
+                </p>
+            </article>
+            <article>
+                <a href="../images/Sight.jpg">
+                    <img src="../images/SightLo.jpg" alt="2019 Photo Of Yosemite's Hills">
+                </a>
+                <h3>april 3, 2018</h3>
+                <p>
+                    in 2018, i visited Yosemite national park,
+                    and took this beautiful photo in memoriam 
+                    of the national park, as the sun shines 
+                    perfectly against the hills.
+                </p>
+            </article>
+            <article>
+                <a href="../images/City.jpg">
+                    <img src="../images/CityLo.jpg" alt="A photo of a city from far away">
+                </a>
+                <h3>may 28, 2018</h3>
+                <p>
+                    while looking around in the wilderness, 
+                    i've spotted this scene of a large city 
+                    in the background and decided to take a 
+                    picture.
+                </p>
+            </article>
+            <article>
+                <a href="../images/View.jpg">
+                    <img src="../images/ViewLo.jpg" alt="View of a mountainside, taken in a building">
+                </a>
+                <h3>january 1, 2019</h3>
+                <p>
+                    back in new years 2019, me and my family 
+                    decided to go to this landscape in california.
+                    we saw this building and decided to go in. 
+                    i saw this beautiful view and took this photo.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Cave.jpg">
+                    <img src="../images/CaveLo.jpg" alt="A photo of the ceiling of a cave system">
+                </a>
+                <h3>october 3, 2019</h3>
+                <p>
+                    this is a photo taken in a cave system 
+                    i visited while checking out arizona.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Ravine.jpg">
+                    <img src="../images/RavineLo.jpg" alt="A ravine under the bridge">
+                </a>                
+                <h3>october 3, 2019</h3>
+                <p>
+                    This is a photo i've taken while passing 
+                    a bridge. though the bridge doesn't look 
+                    out of the ordinary in a far enough angle,
+                    when you decide to finally cross the bridge, 
+                    you see this large, beautiful ravine.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Fields.jpg">
+                    <img src="../images/FieldsLo.jpg" alt="Photo of a grassy field">
+                </a>
+                <h3>april 11, 2020</h3>
+                <p>
+                    this is a photo of a field of grass and 
+                    some hills in the distance. I decided to 
+                    take this photo as it looks beautiful, 
+                    with the semi-cloudy sky and the sun 
+                    reflecting off the field of grass.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Shine.jpg">
+                    <img src="../images/ShineLo.jpg" alt="Shining sun over the sea">
+                </a>                
+                <h3>may 25, 2020</h3>
+                <p>
+                    this is a photo where i decided to take 
+                    a picture, as the sun seen to shine brighter
+                    that day, and see what i would look like when 
+                    taken. this, luckily, looked amazing.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Glisten.jpg">
+                    <img src="../images/GlistenLo.jpg" alt="Photo of sun shining off the sea">
+                </a>                
+                <h3>march 16, 2021</h3>
+                <p>
+                    this is a photo of a cliffside, where the 
+                    sun shines off the sea. the sun was setting 
+                    and this was an opportune time to take a photo.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Snow.jpg">
+                    <img src="../images/SnowLo.jpg" alt="Snowy mountains with a lot of fog">
+                </a>
+                <h3>january 3, 2022</h3>
+                <p>
+                    this photo is taken in a place nicknames "bear 
+                    valley". this place in california snows, especially
+                    in the winter times. i decided to take this beautiful
+                    on my phone.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Cold.jpg">
+                    <img src="../images/ColdLo.jpg" alt="Grassy mountain, covered in snow">
+                </a>                
+                <h3>january 3, 2023</h3>
+                <p>
+                    i was by couple of snow-covered 
+                    mountains and decided to take this photo 
+                    of this particular view.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Clouds.jpg">
+                    <img src="../images/CloudsLo.jpg" alt="Photo of the sun, shining over the fog">
+                </a>
+                <h3>august 31. 2023</h3>
+                <p>
+                    while journeying, i saw the fog float
+                    especially low one day and decided to 
+                    take this pic, as the sun shines over 
+                    the fog.
+                </p>
+            </article>
+            <article>
+                <a href="../images/Pano.jpg">
+                    <img src="../images/PanoLo.jpg" alt="A pano pic of Yosemite">
+                </a>
+                <h3>february 28, 2024</h3>
+                <p>
+                    while looking around Yosemite national 
+                    park, i view around me this beautiful 
+                    landscape and decided to take a panorama 
+                    photo instead of a basic photo.
                 </p>
             </article>
         </section>
