finished up stylizing the rest of the pages

--- a/Works/works.html
+++ b/Works/works.html
@@ -15,8 +15,8 @@
             <nav>
                 <a href="../About/about.html" id="others">About</a>
                 <a href="works.html" id="others">Works</a>
-                <a href="#" id="others">Interests</a>
-                <a href="#" id="others">Contact</a>
+                <a href="../Interests/interests.html" id="others">Interests</a>
+                <a href="../Contact/contact.html" id="others">Contact</a>
             </nav>
         </header>
 
