--- a/About/about.html
+++ b/About/about.html
@@ -15,8 +15,8 @@
             <nav>
                 <a href="about.html" id="others">About</a>
                 <a href="../Works/works.html" id="others">Works</a>
-                <a href="#" id="others">Interests</a>
-                <a href="#" id="others">Contact</a>
+                <a href="../Interests/interests.html" id="others">Interests</a>
+                <a href="../Contact/contact.html" id="others">Contact</a>
             </nav>
         </header>
 
@@ -53,78 +53,6 @@
                 from the towns and large cities.
             </p>
             <br>
-            <p>Here's a few of my favorites:</p>
-            <section id="fav">
-                <article>
-                    <h2>Favorite Aesthetics</h2>
-                    <dl>
-                        <dt>Frutiger Aero</dt>
-                        <dd>
-                            bubbly design of the 2000s, mostly has tones of optimism and cold colors
-                        </dd>
-                        <dt>liminal space</dt>
-                        <dd>
-                            a horror-themed aesthetic with uneasy images of places
-                        </dd>
-                        <dt>frutiger aesthetic</dt>
-                        <dd>
-                            an early 2000s aesthetic involving visual aspects similar to the nothern lights
-                        </dd>
-                        <dt>analog horror</dt>
-                        <dd>
-                            a horror-themed aesthetic that has a theme of old analog tapes
-                        </dd>
-                        <dt>skeuomorphism</dt>
-                        <dd>
-                            similar to frutiger aero, has a bubbly tone to it for older versions for phone apps
-                        </dd>
-                        <dt>old web</dt>
-                        <dd>
-                            an aesthetic with the theming around early years of the internet
-                        </dd>
-                    </dl>
-                </article>
-                <article>
-                    <h2>favorite gems</h2>
-                    <ol id="gems">
-                        <li id="azure">azure</li>
-                        <li id="pearl">pearl</li>
-                        <li id="barite">barite</li>
-                        <li id="garnet">garnet</li>
-                        <li id="ruby">ruby</li>
-                        <li id="citrine">citrine</li>
-                        <li id="gold">gold</li>
-                        <li id="topaz">topaz</li>
-                        <li id="peridot">peridot</li>
-                        <li id="alexandrite">alexandrite</li>
-                        <li id="emerald">emerald</li>
-                        <li id="aquamarine">aquamarine</li>
-                        <li id="turquoise">turquoise</li>
-                        <li id="bloodstone">bloodstone</li>
-                        <li id="diamond">diamond</li>
-                        <li id="sapphire">sapphire</li>
-                        <li id="tanzanite">tanzanite</li>
-                        <li id="amethyst">amethyst</li>
-                    </ol>
-                </article>
-                <article>
-                    <h2>favorite types of music</h2>
-                    <ul>
-                        <li>atmospheric</li>
-                        <li>rock</li>
-                        <li>krush club</li>
-                        <li>rock</li>
-                        <li>epic</li>
-                        <li>slow</li>
-                        <li>phonk</li>
-                        <li>eurodance</li>
-                        <li>techno</li>
-                        <li>calm</li>
-                        <li>upbeat</li>
-                        <li></li>
-                    </ul>
-                </article>
-            </section>
         </section>
 
         <footer>
