made links go to a different tab and changed up fonts

--- a/About/about.html
+++ b/About/about.html
@@ -5,7 +5,6 @@
         <title>The Adam's Experience: About Page</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9">
     </head>
     <body>
         <header>
@@ -56,7 +55,7 @@
         </section>
 
         <footer>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
                 <h4>&copy; L.O.L. Productions</h4>
             </a>
         </footer>
