--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -24,27 +24,27 @@
             <h1>Here's some sites where you can contact me.</h1>
             <ul>
                 <li>
-                    <a href="https://www.google.com">
+                    <a href="https://www.google.com" target="_blank">
                         google
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com">
+                    <a href="https://www.youtube.com" target="_blank">
                         youtube
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.twitter.com">
+                    <a href="https://www.twitter.com" target="_blank">
                         twitter/x
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.photopea.com">
+                    <a href="https://www.photopea.com" target="_blank">
                         photopea
                     </a>
                 </li>
                 <li>
-                    <a href="../index.html">
+                    <a href="../index.html" target="_blank">
                         theAdamsExperience.com
                     </a>
                 </li>
@@ -52,7 +52,7 @@
         </section>
 
         <footer>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
                 <h4>&copy; L.O.L. Productions</h4>
             </a>
         </footer>
