--- a/Works/works.html
+++ b/Works/works.html
@@ -5,7 +5,6 @@
         <title>The Adam's Experience: Works Page</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9">
     </head>
     <body>
         <header>
@@ -32,7 +31,7 @@
 
         <section id="imgs">
             <article>
-                <a href="../images/Mountain .jpg">
+                <a href="../images/Mountain .jpg" target="_blank">
                     <img src="../images/MountainLo.jpg" alt="Mountains By the Roadside">
                 </a>
                 <h3>july 23, 2017</h3>
@@ -44,7 +43,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Light.jpg">
+                <a href="../images/Light.jpg" target="_blank">
                     <img src="../images/LightLo.jpg" alt="Sun Shining Past Clouds">
                 </a>
                 <h3>july 23, 2017</h3>
@@ -57,7 +56,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Canyon.jpg">
+                <a href="../images/Canyon.jpg" target="_blank">
                     <img src="../images/CanyonLo.jpg" alt="A photo from the large Canyon">
                 </a>
                 <h3>July 26, 2017</h3>
@@ -69,7 +68,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Rushmore.jpg">
+                <a href="../images/Rushmore.jpg" target="_blank">
                     <img src="../images/RushmoreLo.jpg" alt="Photo Of Mount Rushmore">
                 </a>
                 <h3>july 26, 2017</h3>
@@ -82,7 +81,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Hills.jpg">
+                <a href="../images/Hills.jpg" target="_blank">
                     <img src="../images/HillsLo.jpg" alt="A photo of some hills by some road railing">
                 </a>
                 <h3>july 28, 2017</h3>
@@ -94,7 +93,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Waterfall.jpg">
+                <a href="../images/Waterfall.jpg" target="_blank">
                     <img src="../images/WaterfallLo.jpg" alt="A photo of watercfalls">
                 </a>
                 <h3>July 30, 2017</h3>
@@ -105,7 +104,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/WaterfallPano.jpg">
+                <a href="../images/WaterfallPano.jpg" target="_blank">
                     <img src="../images/WaterfallPanoLo.jpg" alt="A more in-depth pano pic of the waterfalls">
                 </a>
                 <h3>july 30, 2017</h3>
@@ -117,7 +116,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Eclipse.jpg">
+                <a href="../images/Eclipse.jpg" target="_blank">
                     <img src="../images/EclipseLo.jpg" alt="2017 Solar Eclipse">
                 </a>
                 <h3>august 21, 2017</h3>
@@ -132,7 +131,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Sight.jpg">
+                <a href="../images/Sight.jpg" target="_blank">
                     <img src="../images/SightLo.jpg" alt="2019 Photo Of Yosemite's Hills">
                 </a>
                 <h3>april 3, 2018</h3>
@@ -144,7 +143,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/City.jpg">
+                <a href="../images/City.jpg" target="_blank">
                     <img src="../images/CityLo.jpg" alt="A photo of a city from far away">
                 </a>
                 <h3>may 28, 2018</h3>
@@ -156,7 +155,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/View.jpg">
+                <a href="../images/View.jpg" target="_blank">
                     <img src="../images/ViewLo.jpg" alt="View of a mountainside, taken in a building">
                 </a>
                 <h3>january 1, 2019</h3>
@@ -168,7 +167,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Cave.jpg">
+                <a href="../images/Cave.jpg" target="_blank">
                     <img src="../images/CaveLo.jpg" alt="A photo of the ceiling of a cave system">
                 </a>
                 <h3>october 3, 2019</h3>
@@ -178,7 +177,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Ravine.jpg">
+                <a href="../images/Ravine.jpg" target="_blank">
                     <img src="../images/RavineLo.jpg" alt="A ravine under the bridge">
                 </a>                
                 <h3>october 3, 2019</h3>
@@ -191,7 +190,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Fields.jpg">
+                <a href="../images/Fields.jpg" target="_blank">
                     <img src="../images/FieldsLo.jpg" alt="Photo of a grassy field">
                 </a>
                 <h3>april 11, 2020</h3>
@@ -204,7 +203,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Shine.jpg">
+                <a href="../images/Shine.jpg" target="_blank">
                     <img src="../images/ShineLo.jpg" alt="Shining sun over the sea">
                 </a>                
                 <h3>may 25, 2020</h3>
@@ -216,7 +215,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Glisten.jpg">
+                <a href="../images/Glisten.jpg" target="_blank">
                     <img src="../images/GlistenLo.jpg" alt="Photo of sun shining off the sea">
                 </a>                
                 <h3>march 16, 2021</h3>
@@ -227,7 +226,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Snow.jpg">
+                <a href="../images/Snow.jpg" target="_blank">
                     <img src="../images/SnowLo.jpg" alt="Snowy mountains with a lot of fog">
                 </a>
                 <h3>january 3, 2022</h3>
@@ -239,7 +238,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Cold.jpg">
+                <a href="../images/Cold.jpg" target="_blank">
                     <img src="../images/ColdLo.jpg" alt="Grassy mountain, covered in snow">
                 </a>                
                 <h3>january 3, 2023</h3>
@@ -250,7 +249,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Clouds.jpg">
+                <a href="../images/Clouds.jpg" target="_blank">
                     <img src="../images/CloudsLo.jpg" alt="Photo of the sun, shining over the fog">
                 </a>
                 <h3>august 31. 2023</h3>
@@ -262,7 +261,7 @@
                 </p>
             </article>
             <article>
-                <a href="../images/Pano.jpg">
+                <a href="../images/Pano.jpg" target="_blank">
                     <img src="../images/PanoLo.jpg" alt="A pano pic of Yosemite">
                 </a>
                 <h3>february 28, 2024</h3>
@@ -276,7 +275,7 @@
         </section>
 
         <footer>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
                 <h4>&copy; L.O.L. Productions</h4>
             </a>
         </footer>
