--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <title>The Adams Experience</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9">
     </head>
     <body>
         <header>
@@ -61,7 +60,7 @@
         </section>
 
         <footer>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
                 <h4>&copy; L.O.L. Productions</h4>
             </a>
         </footer>
