Changed up the styling the index and interest pages

--- a/Interests/interests.html
+++ b/Interests/interests.html
@@ -5,7 +5,6 @@
         <title>The Adam's Experience: Interests Page</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9">
     </head>
     <body>
         <header>
@@ -140,18 +139,6 @@
                 </ul>
             </article>
             <article>
-                <h2>Favorite emojis</h2>
-                <ul id="emoticon">
-                    <li>&#128512;</li>
-                    <li>&#128540;</li>
-                    <li>&#128519;</li>
-                    <li>&#128579;</li>
-                    <li>&#129398;</li>
-                    <li>&#128526;</li>
-                    <li>&#128567;</li>
-                </ul>
-            </article>
-            <article>
                 <h2>favorite aspects in html/css coding</h2>
                 <ol>
                     <li>flexboxes</li>
@@ -164,25 +151,26 @@
                 </ol>
             </article>
             <article>
-                <h2>cool utf-8 symbols you can use</h2>
-                <ul>
-                    <li>&#9728;</li>
-                    <li>&#9729;</li>
-                    <li>&#9730;</li>
-                    <li>&#9731;</li>
-                    <li>&#9742;</li>
-                    <li>&#9743;</li>
-                </ul>
-            </article>
-            <article>
-                <h2>other colored utf-8 symbols you can use</h2>
-                <ul>
-                    <li>&#9811;</li>
-                    <li>&#9889;</li>
-                    <li>&#9971;</li>
-                    <li>&#8986;</li>
-                    <li>&#8987;</li>
-                </ul>
+                <h2>favorite typefaces</h2>
+                <dl>
+                    <dt>Times New Roman</dt>
+                    <dd>
+                        Basic formal font for many
+                        body text
+                    </dd>
+                    <dt>Arial</dt>
+                    <dd>
+                        a basic font, without any 
+                        glyphs or brackets
+                    </dd>
+                    <dt>Baskerville URW</dt>
+                    <dd>
+                        similarly to times new 
+                        roman, this font has the 
+                        perfect tone formality 
+                        and glyph.
+                    </dd>
+                </dl>
             </article>
         </section>
 
