--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <section id="view">
             <article>
                 <img src="images/Ravine.jpg" alt="A ravine">
+                <h4>Oct. 3, 2019</h4>
                 <p>
-                    <strong>Oct. 3, 2019</strong> <br>
                     A pic of a ravine taken while 
                     crossing a bridge.
                 </p>
             </article>
             <article>
                 <img src="images/Shine.jpg" alt="A sun shining over a cliff">
+                <h4>May 25, 2020</h4>
                 <p>
-                    <strong>May 25, 2020</strong><br>
                     A pic of a cliffside, where the 
                     sun shines above the waters.
                 </p>
@@ -39,10 +39,10 @@
         </section>
 
         <section id="intro">
-            <p>
+            <h2>
                 Hello. My name is <em>Jonnathan Adams</em>,
                 but you can call me "Johnny Adams".
-            </p>
+            </h2>
             <p>
                 I am a photographer and designer. I base my 
                 designs off the many photos I have taken, but 
